--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,11 @@ img {
   height: auto;
 }
 
+.ImageGalleryFind {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 /*
  * Стили компонента App
  */
@@ -42,6 +47,7 @@ img {
  * Стили компонента Searchbar
  */
 .Searchbar {
+  width: 100%;
   top: 0;
   left: 0;
   position: sticky;
@@ -75,7 +81,7 @@ img {
 
 .SearchForm-button {
   display: inline-block;
-  width: 48px;
+  /* width: 48px; */
   height: 48px;
   border: 0;
   background-image: url('https://image.flaticon.com/icons/svg/149/149852.svg');
@@ -93,14 +99,14 @@ img {
 }
 
 .SearchForm-button-label {
-  position: absolute;
+  /* position: absolute;
   width: 1px;
-  height: 1px;
+  height: 1px; */
   padding: 0;
   overflow: hidden;
   clip: rect(0, 0, 0, 0);
   white-space: nowrap;
-  clip-path: inset(50%);
+  /* clip-path: inset(50%); */
   border: 0;
 }
 
@@ -134,6 +140,7 @@ img {
   list-style: none;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 35px;
 }
 
 /*
@@ -183,6 +190,7 @@ img {
 * Стили компонента Buton (Load more)
 */
 .Button {
+  margin-bottom: 35px;
   padding: 8px 16px;
   border-radius: 2px;
   background-color: #3f51b5;
