edit modal styles, add logic

--- a/src/index.css
+++ b/src/index.css
@@ -84,7 +84,7 @@ img {
   /* width: 48px; */
   height: 48px;
   border: 0;
-  background-image: url('https://image.flaticon.com/icons/svg/149/149852.svg');
+  /* background-image: url('https://image.flaticon.com/icons/svg/149/149852.svg'); */
   background-size: 40%;
   background-repeat: no-repeat;
   background-position: center;
@@ -182,8 +182,12 @@ img {
 }
 
 .Modal {
-  max-width: calc(100vw - 48px);
-  max-height: calc(100vh - 24px);
+  /* max-width: calc(100vw - 48px); */
+  /* max-height: calc(100vh - 24px); */
+  width: 450px;
+  height: 450px;
+  border-radius: 15px;
+  background-color: white;
 }
 
 /*
